--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     },
     "devDependencies": {
         "axios": "^0.17",
+        "babel-preset-react": "^6.24.1",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.4.5",
+        "babel-loader": "^6.2.1",
+        "babel-preset-es2015": "^6.3.13",
+        "babel-preset-react": "^6.3.13",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     }
 }
