--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "babel-loader": "^6.2.1",
         "babel-preset-es2015": "^6.3.13",
         "babel-preset-react": "^6.3.13",
+        "node-fetch": "^2.0.0",
+        "object-assign": "^4.1.1",
         "react": "^16.2.0",
         "react-dom": "^16.2.0"
     }
