--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/vote.js": "/js/vote.js"
+    "/js/app.js": "/js/app.js?id=7b4f2ca012a55cfefaf2",
+    "/css/app.css": "/css/app.css?id=16fe31dd4f13d64d2662",
+    "/js/vote.js": "/js/vote.js?id=fd4e781882a62e79f9d6"
 }
