--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.17",
-        "babel-preset-react": "^6.24.1",
-        "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "@babel/preset-react": "^7.10.4",
+        "axios": "^0.19.2",
+        "bootstrap-sass": "^3.4.1",
+        "cross-env": "^7.0.2",
+        "jquery": "^3.5.1",
+        "laravel-mix": "^5.0.4",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.26.10",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
         "babel-cli": "^6.26.0",
-        "babel-core": "^6.4.5",
-        "babel-loader": "^6.2.1",
-        "babel-preset-es2015": "^6.3.13",
-        "babel-preset-react": "^6.3.13",
-        "node-fetch": "^2.0.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.1.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "node-fetch": "^2.6.0",
         "object-assign": "^4.1.1",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
     }
 }
